--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="icon" type="image/png" sizes="96x96" href="screenshots/favicon-96x96.png">
+
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/overlay.css">
     <link rel="stylesheet" href="styles/game-config.css">
@@ -44,7 +46,7 @@
                 <li>
                     <article>
                         <h2>Player 1</h2>
-                        <h3 id="player-1-name">PLAYNAME</h3>
+                        <h3 id="player-1-name">PLAYER NAME</h3>
                         <p class="player-icon">X</p>
                         <button class="btn-alt" id="player1-edit-btn" data-playerid="1">Edit</button>
                     </article>
@@ -52,7 +54,7 @@
                 <li>
                     <article>
                         <h2>Player 2</h2>
-                        <h3 id="player-2-name">PLAYERNAME</h3>
+                        <h3 id="player-2-name">PLAYER NAME</h3>
                         <p class="player-icon">O</p>
                         <button class="btn-alt" id="player2-edit-btn" data-playerid="2">Edit</button>
                     </article>
@@ -62,22 +64,22 @@
         </section>
         <section id="active-game">
             <article>
-                <h2>You won, <span id="active-player-name">PLAYERNAME</span>!</h2>
+                <h2>You won, <span id="active-player-name">PLAYER NAME</span>!</h2>
                 <p>Click "Start New Game" above to start a new game!</p>
             </article>
-            <p>It's your turn <span>PLAYERNAME</span>!</p>
-            <ol>
-                <li class="disabled">X</li>
-                <li></li>
-                <li class="disabled">O</li>
+            <p>It's your turn <span id="player-turn-name">PLAYER NAME</span>!</p>
+            <ol id="game-board">
+                <li data-row="1" data-col="1"></li>
+                <li data-row="1" data-col="2"></li>
+                <li data-row="1" data-col="3"></li>
 
-                <li></li>
-                <li class="disabled">X</li>
-                <li></li>
+                <li data-row="2" data-col="1"></li>
+                <li data-row="2" data-col="2"></li>
+                <li data-row="2" data-col="3"></li>
 
-                <li></li>
-                <li></li>
-                <li></li>
+                <li data-row="3" data-col="1"></li>
+                <li data-row="3" data-col="2"></li>
+                <li data-row="3" data-col="3"></li>
             </ol>
         </section>
     </main>
